--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <meta name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
   <meta charset="UTF-8" />
   <title>Таймер остановки внутреннего диалога (вертикальный таймлайн)</title>
   <style>
